
2017-08-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c: bug #413 don't generate cob_check_based for UDF return fields
	* cobc.c (xref_print): output marker for receiving references

2017-08-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c: added cobc_early_exit and adjusted exit calls to fix missing free
	* ppparse.y: CDF: warn if compiler flag is unknown

2017-08-12  Ron Norman <rjn@inglenet.com>

	* codegen.c: Place all code to clear Decimal Constant values under
	  label P_clear_decimal and invoke that code when 'entry' is -20

2017-08-11  Edward Hart <edward.dan.hart@gmail.com>

	* reserved.c: implemented (not-)register: DIALECT-ALL.
	* codegen.c (output_internal_function): fixed C compile error when
	  RETURN-CODE register is disabled.

2017-08-10  Edward Hart <edward.dan.hart@gmail.com>

	* cobc.c (cobc_clean_up): added calls to (plex_clear_all) and
	  (ylex_clear_all), fixing bug #407.

2017-08-09  Edward Hart <edward.dan.hart@gmail.com>

	* config.c (cb_config_entry): removed extraneous free (bug #409).
	* config.c (cb_config_entry): fixed indentation.

2017-08-07  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y, reserved.c, typeck.c, tree.h: adjusted and included
	  Patch #27 by Wim Niemans 2016-06-13 for FR #100 as PENDING
	* field.c, tree.c: adjustments for EXTERNAL-FORM
	* cobc.c, error.c, parser.y, typeck.c: msgid specific changes

2017-08-07  Edward Hart <edward.dan.hart@gmail.com>

	* typeck.c: moved RELATIVE KEY validating code to
	  (validate_relative_key), called in (cb_validate_program_data).
	* typeck.c (validate_relative_key): altered to check key is not the
	  associated file's records and improved category check.
	* parser.y: added check that correct KEY clause is used with
	  RELATIVE/INDEXED files (bug #405).

2017-07-29  Edward Hart <edward.dan.hart@gmail.com>

	* reserved.c (system_name_table): added switches USW-0 thru USW-31.