@@ -1,4 +1,8 @@
 
+2017-08-18  Edward Hart <edward.dan.hart@gmail.com>
+
+	* parser.y (screen_occurs_clause): marked as pending.
+
 2017-08-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* typeck.c: bug #413 don't generate cob_check_based for UDF return fields
